# photon

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
CMake/: 3rdPartyPackages.cmake  Build3rdParty.cmake
examples/: CMakeLists.txt  prism_service.cpp  tour.cpp
src/: CMakeLists.txt
src/photon/: connect_params.cpp  connect_params.h  connection.cpp  connection.h  copy.cpp  copy.h  decode.h  error.h  named.cpp  named.h  params.h  photon.h  pipeline.cpp  pipeline.h  pool.cpp  pool.h  prism.h  result.h  row_binding.h  transaction.cpp  transaction.h  types.h  version.cpp
src/photon/detail/: frame_reader.h  message.cpp  message.h  protocol.h  scram.cpp  scram.h  timeout.h  transport.cpp  transport.h
tests/: CMakeLists.txt  binding_tests.cpp  codec_tests.cpp  dsn_tests.cpp  error_tests.cpp  integration_tests.cpp  message_tests.cpp  named_tests.cpp  pipeline_tests.cpp  prism_integration_tests.cpp  scram_tests.cpp  stress_tests.cpp  type_codec_tests.cpp  version_tests.cpp
